adjustment for mini screen spacer

--- a/views/news/1.jade
+++ b/views/news/1.jade
@@ -9,7 +9,7 @@
     .col-md-7.text-right.hidden-sm.hidden-xs
       img.img-responsive(style='height:360px;', src='/img/news/mast_factory.svg')
     .col-sm-12.visible-sm.visible-xs
-      img.img-responsive(style='height:360px;', src='/img/news/mast_factory.svg')
+      img.img-responsive(style='max-height:360px;', src='/img/news/mast_factory.svg')
       .spacer-40
 
     .col-md-4.hidden-sm.hidden-xs
