--- a/views/includes/head.jade
+++ b/views/includes/head.jade
@@ -15,6 +15,8 @@ head(lang='en')
   link(rel='stylesheet', href='/components/bootstrap/dist/css/bootstrap.min.css')
   link(rel='stylesheet', href='/components/bootstrap/dist/css/bootstrap-theme.min.css')
   link(rel='stylesheet', href='/css/mgd.css')
+  if page == 'directory'
+    link(rel='stylesheet', href='/css/directory.css')
 
   if locals.NODE_ENV === 'development'
     block js
