--- a/views/includes/scripts.jade
+++ b/views/includes/scripts.jade
@@ -13,6 +13,7 @@ case page
     script(src='/js/index.js')
 
   when 'directory'
+    script(src='/components/isotope/dist/isotope.pkgd.min.js')
     script(src='/js/directory.js')
 
   when 'faq'
