--- a/views/directory/2.jade
+++ b/views/directory/2.jade
@@ -21,3 +21,128 @@
 
   .row
     .spacer-40
+
+
+  .row(style='max-width: 900px;').hidden-xs.hidden-sm
+    .col-md-6.text-center
+      img(style='height: 313px;', src='/img/directory/directory_search_art.svg')
+
+    .col-md-6.text-center
+      .row.categories
+        .col-md-4
+          .row
+            img(style='height: 92px;', src='/img/directory/directory_category_icon_gamedevstudio.svg')
+          .row.a
+            .spacer-10
+            span GAME DEV
+            br
+            span STUDIO
+        .col-md-4
+          .row
+            img(style='height: 92px;', src='/img/directory/directory_category_icon_multibusiness.svg')
+          .row.b
+            .spacer-10
+            span MULTI-BUSINESS
+            br
+            span COMPANIES
+        .col-md-4
+          .row
+            img(style='height: 92px;', src='/img/directory/directory_category_icon_artoutsourcing.svg')
+          .row.c
+            .spacer-10
+            span ART OUTSOURCING
+            br
+            span STUDIO
+
+      .row
+        .spacer-20
+
+      .row.categories
+        .col-md-4
+          .row
+            img(style='height: 92px;', src='/img/directory/directory_category_icon_gamepublishers.svg')
+          .row.a
+            .spacer-10
+            span GAME
+            br
+            span PUBLISHERS
+        .col-md-4
+          .row
+            img(style='height: 92px;', src='/img/directory/directory_category_icon_institute.svg')
+          .row.b
+            .spacer-10
+            span INSTITUTIONS &
+            br
+            span ACADEMIES
+        .col-md-4
+          .row
+            img(style='height: 92px;', src='/img/directory/directory_category_icon_incubator.svg')
+          .row.c
+            .spacer-10
+            span INCUBATION
+            br
+            span &nbsp;
+
+
+
+  .row(style='max-width: 500px;').visible-xs.visible-sm.categories.text-center
+    .row(style='margin-left: 15px; margin-right: 15px;')
+      .col-xs-6
+        .row
+          img(style='height: 92px;', src='/img/directory/directory_category_icon_gamedevstudio.svg')
+        .row.a
+          .spacer-10
+          span GAME DEV
+          br
+          span STUDIO
+      .col-xs-6
+        .row
+          img(style='height: 92px;', src='/img/directory/directory_category_icon_gamepublishers.svg')
+        .row.a
+          .spacer-10
+          span GAME
+          br
+          span PUBLISHERS
+    .row
+      .spacer-20
+    .row(style='margin-left: 15px; margin-right: 15px;')
+      .col-xs-6
+        .row
+          img(style='height: 92px;', src='/img/directory/directory_category_icon_multibusiness.svg')
+        .row.b
+          .spacer-10
+          span MULTI-BUSINESS
+          br
+          span COMPANIES
+      .col-xs-6
+        .row
+          img(style='height: 92px;', src='/img/directory/directory_category_icon_institute.svg')
+        .row.b
+          .spacer-10
+          span INSTITUTIONS &
+          br
+          span ACADEMIES
+    .row
+      .spacer-20
+    .row(style='margin-left: 15px; margin-right: 15px;')
+      .col-xs-6
+        .row
+          img(style='height: 92px;', src='/img/directory/directory_category_icon_artoutsourcing.svg')
+        .row.c
+          .spacer-10
+          span ART OUTSOURCING
+          br
+          span STUDIO
+      .col-xs-6
+        .row
+          img(style='height: 92px;', src='/img/directory/directory_category_icon_incubator.svg')
+        .row.c
+          .spacer-10
+          span INCUBATION
+          br
+          span &nbsp;
+
+
+
+  .row
+    .spacer-40
