--- a/views/page_directory.jade
+++ b/views/page_directory.jade
@@ -4,6 +4,7 @@ block content
   if locals.NODE_ENV === 'development'
     include directory/1
     include directory/2
+    include directory/3
 
   if locals.NODE_ENV !== 'development'
     .row.text-center(style='background-color: #9396bc')
