--- a/public/css/mgd.css
+++ b/public/css/mgd.css
@@ -67,6 +67,7 @@
 .section .spacer-40      { padding-bottom: 40px; }
 .section .spacer-20      { padding-bottom: 20px; }
 .section .spacer-10      { padding-bottom: 10px; }
+.section .spacer-05      { padding-bottom:  5px; }
 
 
 
