--- a/views/includes/head.jade
+++ b/views/includes/head.jade
@@ -12,6 +12,7 @@ head(lang='en')
 
   title MYGAMEDEV
 
+  link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Nunito:400,700,300')
   link(rel='stylesheet', href='/components/bootstrap/dist/css/bootstrap.min.css')
   link(rel='stylesheet', href='/components/bootstrap/dist/css/bootstrap-theme.min.css')
   link(rel='stylesheet', href='/css/mgd.css')
