added in the search function

--- a/public/css/directory.css
+++ b/public/css/directory.css
@@ -113,6 +113,7 @@ input[type=text]::-webkit-input-placeholder { color: #C74C59; }
     padding-top: 20px;
     padding-bottom: 40px;
     padding-left: 15px;
+    padding-right: 15px;
 }
 
 .listing .desc .url > a  {
