--- a/views/includes/scripts.jade
+++ b/views/includes/scripts.jade
@@ -2,6 +2,7 @@ if locals.NODE_ENV != 'development'
   script(src='/js/ga.js')
 
 script(src='/components/lodash/lodash.min.js')
+script(src='/components/moment/min/moment.min.js')
 script(src='/components/jquery/dist/jquery.min.js')
 script(src='/components/bootstrap/dist/js/bootstrap.min.js')
 script(src='/components/console.image/console.image.min.js')
