--- a/public/css/news.css
+++ b/public/css/news.css
@@ -19,13 +19,14 @@
     width: 26px;
     height: 26px;
     padding: 4px;
+    margin-right: 2px;
+    margin-left: 2px;
 }
 
 .carousel-pager .number:hover {
     border-radius: 50%;
     background-color: #DC5473;
     color: #ffffff;
-
 }
 
 .carousel-pager .number.active {
@@ -35,7 +36,7 @@
 }
 
 .arrow-left {
-    margin:4px;
+    margin: 6px;
     margin-right: 15px;
     display: block;
     float: left;
@@ -49,7 +50,7 @@
 }
 
 .arrow-right {
-    margin:4px;
+    margin: 6px;
     margin-left: 15px;
     display: block;
     float: left;
