--- a/views/news/3.jade
+++ b/views/news/3.jade
@@ -36,20 +36,19 @@
     .row(style='position: relative; z-index: 3; max-width: 930px; box-shadow: 14px 8px #007579;')
       .row(style='background-color: #EE6361; max-width: 930px;')
         .text-center(style='color: #EFF8E7; font-family: Oswald; font-size: 27px; font-weight: bold; padding-top: 8px; padding-bottom: 8px;') PLAYLIST
-      .row#playlist(style='background-color: #FFFFFF; max-width: 930px;')
-        .row(style='background-color: #FFFFFF; max-width: 930px;')
-          .row
-            .spacer-20
-            .spacer-10
-          .carousel.slide
-            .carousel-inner#video-carousel(style="height: 235px;")
-          .row.carousel-pager
-            ul
-              li#video-prev-button.arrow-left
-              li#video-one-button.number 1
-              li#video-two-button.number 2
-              li#video-three-button.number 3
-              li#video-next-button.arrow-right
+      .row(style='background-color: #FFFFFF; max-width: 930px;')
+        .row
+          .spacer-20
+          .spacer-10
+        .carousel.slide(data-ride="carousel")
+          .carousel-inner#video-carousel(style="height: 235px;", role="listbox")
+        .row.carousel-pager
+          ul
+            li#video-prev-button.arrow-left
+            li#video-one-button.number 1
+            li#video-two-button.number 2
+            li#video-three-button.number 3
+            li#video-next-button.arrow-right
 
 
   .row
