--- a/public/css/directory.css
+++ b/public/css/directory.css
@@ -46,13 +46,13 @@ input[type=text]::-webkit-input-placeholder { color: #C74C59; }
 }
 
 #category-header span {
-    font-family: Avenir;
+    font-family: 'Avenir', sans-serif;
     font-weight: 600;
     color: white;
 }
 
 .categories span {
-    font-family: Avenir;
+    font-family: 'Avenir', sans-serif;
     font-weight: 800;
     font-size: 10px;
 }
