--- a/views/directory/1.jade
+++ b/views/directory/1.jade
@@ -20,7 +20,7 @@
         h1.mast-title(style='text-shadow: 4px 4px #005175;') DIRECTORY
       .row.text-center
         .spacer-10
-        p.mast-desc(style='color: #4D3C6D; font-family: Avenir; font-weight: 600; font-size: 16px;') Our ever-expanding catalogue of the nation’s game development studios, publishers and more - organized in one spot for easier browsing.
+        p.mast-desc(style='color: #4D3C6D; font-family: \'Avenir\', sans-serif; font-weight: 600; font-size: 16px;') Our ever-expanding catalogue of the nation’s game development studios, publishers and more - organized in one spot for easier browsing.
 
     .col-sm-12.visible-sm.visible-xs
       .row.text-center
@@ -30,6 +30,6 @@
         h1.mast-title(style='text-shadow: 4px 4px #005175;') DIRECTORY
       .row.text-center
         .spacer-10
-        p.mast-desc(style='color: #4D3C6D; font-family: Avenir; font-size: 16px; font-weight: 600; max-width: 350px; margin: 0 auto;') Our ever-expanding catalogue of the nation’s game development studios, publishers and more - organized in one spot for easier browsing.
+        p.mast-desc(style='color: #4D3C6D; font-family: \'Avenir\', sans-serif; font-size: 16px; font-weight: 600; max-width: 350px; margin: 0 auto;') Our ever-expanding catalogue of the nation’s game development studios, publishers and more - organized in one spot for easier browsing.
 
   .spacer-80
