--- a/public/css/mgd.css
+++ b/public/css/mgd.css
@@ -7,7 +7,7 @@
 
 
 * {
-  font-family: Helvetica, sans-serif;
+  font-family: 'Helvetica', sans-serif;
   letter-spacing: 0.05em;
 }
 
@@ -32,7 +32,7 @@
 .navbar-nav > li > a {
     color: #894040;
     text-shadow: none;
-    font-family: "Avenir";
+    font-family: 'Avenir', sans-serif;
     font-weight: 800;
     font-size: 11px;
 }
@@ -59,9 +59,9 @@
 .section .row            { max-width: 1280px; margin: 0 auto; }
 .section .img-responsive { margin: 0 auto;       }
 
-.section .mast-title     { font-family: "Oswald Bold"; font-size: 45px; color: white; }
+.section .mast-title     { font-family: 'Oswald Bold', sans-serif; font-size: 45px; color: white; }
 .section .mast-desc      { font-weight: 400; font-size: 16px; max-width: 330px; margin: 0 auto; }
-.section .panel-title    { font-family: Avenir;  }
+.section .panel-title    { font-family: 'Avenir', sans-serif;  }
 
 .section .spacer-80      { padding-bottom: 80px; }
 .section .spacer-40      { padding-bottom: 40px; }
@@ -115,7 +115,7 @@
   height: 348px;
 }
 .one .title {
-  font-family: "Oswald Bold";
+  font-family: 'Oswald Bold', sans-serif;
   font-size: 45px;
   color: #4E333C;
   position: absolute;
@@ -143,7 +143,7 @@
 }
 .one .title-mobile {
   padding-top: 50px;
-  font-family: "Oswald Bold";
+  font-family: 'Oswald Bold', sans-serif;
   font-size: 45px;
   color: #4E333C;
   text-align: center;
@@ -196,7 +196,7 @@
 }
 .two-a .title {
   color: white;
-  font-family: "Oswald Bold";
+  font-family: 'Oswald Bold', sans-serif;
   font-size: 42px;
   line-height: 1.3;
 }
@@ -218,7 +218,7 @@
 .two-a .title-mobile {
   padding-top: 50px;
   color: white;
-  font-family: "Oswald Bold";
+  font-family: 'Oswald Bold', sans-serif;
   font-size: 30px;
 }
 .two-a .desc-mobile {
@@ -256,14 +256,14 @@
 
 }
 .two-b .desc {
-  font-family: "Helvetica";
+  font-family: 'Helvetica', sans-serif;
   font-size: 16px;
   font-weight: 600;
   color: #69C9CD;
   padding-bottom: 70px;
 }
 .two-b .desc-mobile {
-  font-family: "Helvetica";
+  font-family: 'Helvetica', sans-serif;;
   font-size: 14px;
   font-weight: 600;
   color: #69C9CD;
@@ -278,7 +278,7 @@
 }
 .two-b .subtitle {
   padding-top: 25px;
-  font-family: "Helvetica";
+  font-family: 'Helvetica', sans-serif;;
   font-size: 14px;
   font-weight: 600;
   color: #FFFBD0;
@@ -333,12 +333,12 @@
   padding-bottom: 10px;
 }
 .three .frame .title {
-  font-family: "Bebas";
+  font-family: 'Bebas', sans-serif;
   font-size: 16px;
 }
 .three .frame .desc {
   padding-top: 10px;
-  font-family: Helvetica;
+  font-family: 'Helvetica', sans-serif;;
   font-size: 13px;
   color: #B8E3EC;
   font-weight: 400;
@@ -355,7 +355,7 @@
   box-shadow: 5px 8px 0px #E39874;
 }
 .three .news-frame .title {
-  font-family: "Oswald Bold";
+  font-family: 'Oswald Bold', sans-serif;
   font-size: 34px;
   color: #F1826B;
   padding-top: 15px;
