--- a/public/css/news.css
+++ b/public/css/news.css
@@ -12,7 +12,7 @@
     cursor: pointer;
     color: #123B67;
 
-    font-family: "Avenir", sans-serif;
+    font-family: 'Avenir', sans-serif;
     font-size: 14px;
     font-weight: 800;
     text-align: center;
