more fonts correction

--- a/views/about/3.jade
+++ b/views/about/3.jade
@@ -18,11 +18,11 @@
         .col-xs-6
           img(style='height:100px;', src='/img/about/about_motif_cup.svg')
           .spacer-10
-          p(style='font-family: "Avenir-Black"; color: #F4EAE0; max-width:160px; margin: 0 auto;') A Leading Game Development Centre In The Region.
+          p(style='font-family: \'Avenir\', sans-serif; font-weight: 600; color: #F4EAE0; max-width:160px; margin: 0 auto;') A Leading Game Development Centre In The Region.
         .col-xs-6
           img(style='height:100px;', src='/img/about/about_motif_profile.svg')
           .spacer-10
-          p(style='font-family: "Avenir-Black"; color: #F4EAE0; max-width:160px; margin: 0 auto;') A Creator Of High-quality Creative Talents And Content.
+          p(style='font-family: \'Avenir\', sans-serif; font-weight: 600; color: #F4EAE0; max-width:160px; margin: 0 auto;') A Creator Of High-quality Creative Talents And Content.
 
       .row
         .spacer-20
@@ -32,11 +32,11 @@
         .col-xs-6
           img(style='height:100px;', src='/img/about/about_motif_hands.svg')
           .spacer-10
-          p(style='font-family: "Avenir-Black"; color: #F4EAE0; max-width:160px; margin: 0 auto;') An Incubation And Support Hub For Independent Game Developers.
+          p(style='font-family: \'Avenir\', sans-serif; font-weight: 600; color: #F4EAE0; max-width:160px; margin: 0 auto;') An Incubation And Support Hub For Independent Game Developers.
         .col-xs-6
           img(style='height:100px;', src='/img/about/about_motif_aid.svg')
           .spacer-10
-          p(style='font-family: "Avenir-Black"; color: #F4EAE0; max-width:160px; margin: 0 auto;') An Attractive Package For Foreign Game Developers And Investors.
+          p(style='font-family: \'Avenir\', sans-serif; font-weight: 600; color: #F4EAE0; max-width:160px; margin: 0 auto;') An Attractive Package For Foreign Game Developers And Investors.
 
 
   .row
