--- a/views/news/2.jade
+++ b/views/news/2.jade
@@ -28,7 +28,7 @@
         .col-sm-7(style='padding-left: 0px;')
 
           // TITLE
-          .row(style='font-family: Avenir; font-weight:800; font-size: 16px;padding-bottom: 12px;')
+          .row(style='font-family: "\'Avenir\', sans-serif"; font-weight:800; font-size: 16px;padding-bottom: 12px;')
             .spacer-10
             .pull-left(style='color: #78AA42') LATEST FEATURE
             .pull-right(style='color: #69ACB7') 8 SEP 2014
@@ -38,7 +38,7 @@
 
           .row
             .spacer-10
-            .title(style='font-family: Avenir; font-weight: 800; font-size: 24px; color: #02ABB8;') GAME ON MALAYSIA
+            .title(style='font-family: \'Avenir\', sans-serif; font-weight: 800; font-size: 24px; color: #02ABB8;') GAME ON MALAYSIA
 
           .row
             a(style='text-decoration: none;', href='http://www.edgy.my/game-malaysia')
@@ -57,11 +57,11 @@
           .row.text-center(style='max-width: 305px;')
             img(style='width: 107px; margin:0 auto;', src='/img/news/canvas_frame_top.svg')
           .row(style='max-width: 305px; background-color: #78AA42')
-            h4(style='padding-left: 20px; font-family: Avenir; font-weight: 800; font-size: 16px; color: #28622F; padding-top: 5px; padding-bottom: 5px;') MORE NEWS & ARTICLES
+            h4(style='padding-left: 20px; font-family: \'Avenir\', sans-serif; font-weight: 800; font-size: 16px; color: #28622F; padding-top: 5px; padding-bottom: 5px;') MORE NEWS & ARTICLES
 
           // TODO: fetch data from db.
           .row(style='max-width: 305px; background-color: #F0E2C9; padding-top: 10px; padding-bottom: 10px;')
-            .col-xs-7(style='color: #724F3D; font-family: Avenir; margin-left: 15px;')
+            .col-xs-7(style='color: #724F3D; font-family: \'Avenir\', sans-serif; margin-left: 15px;')
               div(style='font-size: 14px; font-weight: 800;') GAME ON FOR GAMERS
               div(style='font-size: 12px;')  8 Jun 2014
             .col-xs-4.text-center
@@ -69,7 +69,7 @@
                 div(style='background-color: #F1826B; color: white; padding: 5px; font-family: Oswald; margin-top: 30%;') READ
 
           .row(style='max-width: 305px; background-color: #E7D6B6; padding-top: 10px; padding-bottom: 10px;')
-            .col-xs-7(style='color: #724F3D; font-family: Avenir; margin-left: 15px;')
+            .col-xs-7(style='color: #724F3D; font-family: \'Avenir\', sans-serif; margin-left: 15px;')
               div(style='font-size: 13px; font-weight: 800;') ELECTRONIC GAMES DEVELOPMENT INDUSTRY TO GROW...
               div(style='font-size: 12px;')  20 NOV 2012
             .col-xs-4.text-center
@@ -77,7 +77,7 @@
                 div(style='background-color: #F1826B; color: white; padding: 5px; font-family: Oswald; margin-top: 30%;') READ
 
           .row(style='max-width: 305px; background-color: #F0E2C9; padding-top: 10px; padding-bottom: 10px;')
-            .col-xs-7(style='color: #724F3D; font-family: Avenir; margin-left: 15px;')
+            .col-xs-7(style='color: #724F3D; font-family: \'Avenir\', sans-serif; margin-left: 15px;')
               div(style='font-size: 14px; font-weight: 800;') KDU REVS VIDEO GAME DEVELOPMENT FOR MYGAMEDEV
               div(style='font-size: 12px;')  8 Jun 2014
             .col-xs-4.text-center
@@ -85,7 +85,7 @@
                 div(style='background-color: #F1826B; color: white; padding: 5px; font-family: Oswald; margin-top: 30%;') READ
 
           .row(style='max-width: 305px; background-color: #E7D6B6; padding-top: 10px; padding-bottom: 10px;')
-            .col-xs-7(style='color: #724F3D; font-family: Avenir; margin-left: 15px;')
+            .col-xs-7(style='color: #724F3D; font-family: \'Avenir\', sans-serif; margin-left: 15px;')
               div(style='font-size: 13px; font-weight: 800;') GAME DEVELOPMENT CLUSTER
               div(style='font-size: 12px;')  20 NOV 2012
             .col-xs-4.text-center
@@ -93,7 +93,7 @@
                 div(style='background-color: #F1826B; color: white; padding: 5px; font-family: Oswald; margin-top: 30%;') READ
 
           .row(style='max-width: 305px; background-color: #F0E2C9; padding-top: 10px; padding-bottom: 10px;')
-            .col-xs-7(style='color: #724F3D; font-family: Avenir; margin-left: 15px;')
+            .col-xs-7(style='color: #724F3D; font-family: \'Avenir\', sans-serif; margin-left: 15px;')
               div(style='font-size: 14px; font-weight: 800;') KDU UNIVERSITY COLLEGE KICKS OFF MYGAMEDEV2020
               div(style='font-size: 12px;')  8 Jun 2014
             .col-xs-4.text-center
