added mobile archive

--- a/public/css/news.css
+++ b/public/css/news.css
@@ -1,6 +1,6 @@
 .toggle_arrow {
     cursor: pointer;
-    width: 150px;
+    width: 100%;
     position: relative;
     background: #6B739E;
     color: #EFF8E7;
