--- a/views/page_news.jade
+++ b/views/page_news.jade
@@ -2,5 +2,5 @@ extends layout_page
 block content
   include news/1
   include news/2
-  include news/3
+  //include news/3
   include common/contact
