--- a/views/news/2.jade
+++ b/views/news/2.jade
@@ -79,15 +79,26 @@
           .row
             .spacer-20
           .row
-            .toggle_arrow OLDER
+            .toggle_arrow.earlier EARLIER
             .spacer-10
           .row
             .toggle_arrow 2013
             .spacer-10
           .row
+            .toggle_arrow 2014
+            .spacer-10
+          .row
             .spacer-20
         .col-sm-8.col-sm-offset-1
           div(style="width:100%; height: 300;background-image: url(\"/img/news/newsarchivebook.svg\");background-repeat:no-repeat; background-position: center center;")
+
+      .row.carousel-pager.hidden-xs
+        ul
+          li#news-prev-button.arrow-left
+          li#news-one-button.number 1
+          li#news-two-button.number 2
+          li#news-three-button.number 3
+          li#news-next-button.arrow-right
 
 
       .row
